RESOLVED FIXED143148
Deconstruction parameters are bound too late
https://bugs.webkit.org/show_bug.cgi?id=143148
Summary Deconstruction parameters are bound too late
Saam Barati
Reported 2015-03-27 13:32:54 PDT
consider: ``` function test({arg}) { print(arg); function arg(){} } test({}) ``` Should print the function, not undefined. This is a simple fix in BytecodeGenerator::generate
Attachments
WIP (2.52 KB, patch)
2015-03-27 15:56 PDT, Saam Barati
no flags
patch (4.72 KB, patch)
2015-03-27 19:15 PDT, Saam Barati
fpizlo: review+
Saam Barati
Comment 1 2015-03-27 15:56:38 PDT
Created attachment 249617 [details] WIP Waiting on a build to get tests results populated.
Saam Barati
Comment 2 2015-03-27 19:15:37 PDT
Filip Pizlo
Comment 3 2015-03-27 22:03:13 PDT
Comment on attachment 249634 [details] patch R=me.
Saam Barati
Comment 4 2015-03-27 23:02:58 PDT
Note You need to log in before you can comment on or make changes to this bug.