Deconstruction parameters are bound too late https://bugs.webkit.org/show_bug.cgi?id=143148

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

Currently, a deconstruction pattern named with the same
name as a function will shadow the function. This is
wrong. It should be the other way around.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::generate):

LayoutTests:

* js/regress/deconstructing-parameters-overridden-by-function-expected.txt: Added.
* js/regress/deconstructing-parameters-overridden-by-function.html: Added.
* js/regress/script-tests/deconstructing-parameters-overridden-by-function.js: Added.
(f):
(test):
(.arg):



Canonical link: https://commits.webkit.org/161209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182109 268f45cc-cd09-0410-ab3c-d52691b4dbfc